--- a/Jcf.Lab.UrlExtractor/AppForm/AppForm.csproj
+++ b/Jcf.Lab.UrlExtractor/AppForm/AppForm.csproj
@@ -47,12 +47,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Client\ChromeWebSocketClient.cs" />
+    <Compile Include="Controllers\UrlExtractorController.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="HttpServers\HttpServer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\UrlExtractorService.cs" />
